...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="Archivieren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/facarchive"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/factitle"
        android:layout_width="wrap_content"
...
