<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2012 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="18sp"
        android:text="Bitte laden Sie noch ein Bild hoch"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:id="@+id/Imageprev"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/title"
        />

    <Button
        android:text="Senden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_button"
        android:layout_toRightOf="@+id/select_pic"
        android:layout_toEndOf="@+id/select_pic"
        android:layout_below="@+id/Imageprev" />

    <Button
        android:text="Bild Auswählen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select_pic"
        android:layout_below="@+id/Imageprev"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title" />

</RelativeLayout>